# voice-flow

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json
examples/benchmarks/: README.md
examples/benchmarks/code-switch-001-fast/: RESULTS.md  audio.m4a  benchmark.json
examples/benchmarks/code-switch-001-normal/: RESULTS.md  audio.m4a  benchmark.json
examples/benchmarks/code-switch-long-001/: RESULTS.md  audio.m4a  benchmark.json
examples/benchmarks/mandarin-basic-001/: RESULTS.md  audio.m4a  benchmark.json
platform/linux/gnome-shell-extension/: extension.js  metadata.json  stylesheet.css
scripts/: install-local.sh  reinstall-local.sh
src/: main.ts  preview-adapter.ts  preview-frame-queue.ts  preview-layout.ts  preview-model.ts  preview-renderer.ts  runtime-preview.ts  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: asr_benchmark.rs
src-tauri/icons/: icon.icns
src-tauri/src/: asr_options.rs  audio.rs  config.rs  controller.rs  diagnostics.rs  lib.rs  logging.rs  main.rs  shortcut.rs  text.rs
src-tauri/src/asr/: mod.rs  protocol.rs
src-tauri/src/platform/: linux.rs  linux_overlay.rs  linux_shell_overlay.rs  macos.rs  mod.rs  unsupported.rs
src-tauri/src/shortcut/: linux.rs
tests/: preview-adapter.test.ts  preview-frame-queue.test.ts  preview-layout.test.ts  preview-model.test.ts  runtime-preview.test.ts
