[package]
name = "voice-flow"
version = "0.1.0"
description = "Cross-application streaming voice input"
authors = ["Voice Flow contributors"]
edition = "2024"

[lib]
name = "voice_flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
cpal = "0.16"
device_query = "4.0.1"
flate2 = "1"
futures-util = "0.3"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { version = "0.9", features = ["vendored"] }
evdev = "0.13"
