[package]
name = "voice-flow"
version = "0.1.0"
description = "Cross-application streaming voice input"
authors = ["Voice Flow contributors"]
edition = "2024"

[lib]
name = "voice_flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
chrono = "0.4"
cpal = "0.16"
device_query = "4.0.1"
flate2 = "1"
futures-util = "0.3"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["image-png", "macos-private-api", "tray-icon"] }
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { version = "0.9", features = ["vendored"] }
evdev = "0.13"
gtk = { version = "0.18", features = ["v3_24"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-application-services = { version = "0.3.2", default-features = false, features = ["std", "AXError", "AXUIElement", "AXValue", "HIServices"] }
objc2-core-foundation = { version = "0.3.2", default-features = false, features = ["std", "CFCGTypes", "CFString"] }
